grammar.js
        stored_definitions: $ => seq(
            optional($.BOM),
            optional($.within_clause),
            repeat(field("storedDefinitions", $.stored_definition))
        ),
        stored_definition: $ => seq(
            optional(field("final", "final")),
            field("classDefinition", $.class_definition), ";"
        ),

        // A.2.2 Class Definition

        class_definition: $ => seq(
            optional(field("encapsulated", "encapsulated")),
            field("classPrefixes", $.class_prefixes),
            field("classSpecifier", $._class_specifier)
        ),

        class_prefixes: $ => seq(
            optional(field("partial", "partial")),
            choice(
                field("block", "block"),
                field("class", "class"),
                seq(
                    optional(field("expandable", "expandable")),
                    field("connector", "connector")),
                seq(
                    optional(choice(field("impure", "impure"), field("pure", "pure"))),
                    optional(field("operator", "operator")),
                    field("function", "function")),
                field("model", "model"),
                field("operator", "operator"),
                field("package", "package"),
                seq(
                    optional(field("operator", "operator")),
                    field("record", "record")),
                field("type", "type")
            )
        ),

        _class_specifier: $ => choice(
            $.derivative_class_specifier,
            $.enumeration_class_specifier,
            $.extends_class_specifier,
            $.long_class_specifier,
            $.short_class_specifier
        ),

        long_class_specifier: $ => seq(
            field("identifier", $.IDENT),
            optional(field("descriptionString", $.description_string)),
            optional($.element_list),
            repeat(choice(
                $.public_element_list,
                $.protected_element_list,
                $.algorithm_section,
                $.equation_section
            )),
            optional(field("externalClause", $.external_clause)),
            optional(seq(field("annotationClause", $.annotation_clause), ";")),
            "end",
            field("endIdentifier", $.IDENT)
        ),

        element_list: $ => seq(
            repeat1(seq(field("element", $._element), ";"))
        ),

        _element: $ => choice(
            $.extends_clause,
            $.import_clause,
            $.named_element
        ),

        named_element: $ => seq(
            optional(field("redeclare", "redeclare")),
            optional(field("final", "final")),
            optional(field("inner", "inner")),
            optional(field("outer", "outer")),
            optional(field("replaceable", "replaceable")),
            choice(
                field("classDefinition", $.class_definition),
                field("componentClause", $.component_clause)
            ),
            optional(seq(
                field("constrainingClause", $.constraining_clause),
                optional(field("descriptionString", $.description_string)),
                optional(field("annotationClause", $.annotation_clause))
            )),
        ),

        component_clause: $ => seq(
            optional(choice(field("flow", "flow"), field("stream", "stream"))),
            optional(choice(field("constant", "constant"), field("discrete", "discrete"), field("parameter", "parameter"))),
            optional(choice(field("input", "input"), field("output", "output"))),
            field("typeSpecifier", $.type_specifier),
            optional(field("subscripts", $.array_subscripts)),
            field("componentDeclarations", $.component_list)
        ),

        component_list: $ => seq(
            field("componentDeclaration", $.component_declaration),
            repeat(seq(",", field("componentDeclaration", $.component_declaration)))
        ),

        component_declaration: $ => seq(
            field("declaration", $.declaration),
            optional(seq("if", field("condition", $.expression))),
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        declaration: $ => seq(
            field("identifier", $.IDENT),
            optional(field("subscripts", $.array_subscripts)),
            optional(field("modification", $.modification))
        ),

        // A.2.5 Modification

        modification: $ => choice(
            seq(field("classModification", $.class_modification), optional(seq("=", field("expression", $.expression)))),
            seq(choice("=", ":="), field("expression", $.expression))
        ),

        equation_section: $ => prec.left(seq(
            optional(field("initial", "initial")), "equation",
            optional(field("equations", $.equation_list))
        )),

        algorithm_section: $ => prec.right(seq(
            optional(field("initial", "initial")), "algorithm",
            optional(field("statements", $.statement_list))
        )),

        equation_list: $ => repeat1(seq(field("equation", $._equation), ";")),

        _equation: $ => choice(
            $.connect_clause,
            $.for_equation,
            $.function_application_equation,
            $.if_equation,
            $.simple_equation,
            $.when_equation
        ),

        statement_list: $ => repeat1(seq(field("statement", $._statement), ";")),

        _statement: $ => choice(
            $.assignment_statement,
            $.break_statement,
            $.for_statement,
            $.function_application_statement,
            $.if_statement,
            $.multiple_output_function_application_statement,
            $.return_statement,
            $.when_statement,
            $.while_statement
        ),

        assignment_statement: $ => seq(
            field("targetExpression", $.component_reference), ":=", field("sourceExpression", $.expression),
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        break_statement: $ => seq(
            "break",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        connect_clause: $ => seq(
            "connect",
            "(",
            field("component1", $.component_reference),
            ",",
            field("component2", $.component_reference),
            ")",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        for_equation: $ => seq(
            "for", field("indices", $.for_indices),
            "loop", optional(field("equations", $.equation_list)),
            "end", "for",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        for_statement: $ => seq(
            "for", field("indices", $.for_indices),
            "loop", optional(field("statements", $.statement_list)),
            "end", "for",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        for_indices: $ => seq(field("index", $.for_index), repeat(seq(",", field("index", $.for_index)))),

        for_index: $ => seq(field("identifier", $.IDENT), optional(seq("in", field("expression", $.expression)))),

        if_equation: $ => seq(
            "if", field("condition", $.expression),
            "then", optional(field("thenEquations", $.equation_list)),
            optional(field("elseIfClauses", $.else_if_equation_clause_list)),
            optional(seq("else", optional(field("elseEquations", $.equation_list)))),
            "end", "if",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        else_if_equation_clause_list: $ => repeat1($.else_if_equation_clause),

        else_if_equation_clause: $ => prec.right(seq(
            "elseif", field("condition", $.expression),
            "then", optional(field("equations", $.equation_list))
        )),

        if_statement: $ => seq(
            "if", field("condition", $.expression),
            "then", optional(field("thenStatements", $.statement_list)),
            optional(field("elseIfClauses", $.else_if_statement_clause_list)),
            optional(seq("else", optional(field("elseStatements", $.statement_list)))),
            "end", "if",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        else_if_statement_clause_list: $ => repeat1($.else_if_statement_clause),

        else_if_statement_clause: $ => prec.right(seq(
            "elseif", field("condition", $.expression),
            "then", optional(field("statements", $.statement_list))
        )),

        return_statement: $ => seq(
            "return",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        simple_equation: $ => seq(
            field("expression1", $.simple_expression), "=", field("expression2", $.expression),
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause)),
        ),

        when_equation: $ => seq(
            "when", field("condition", $.expression),
            "then", optional(field("equations", $.equation_list)),
            optional(field("elseWhenClauses", $.else_when_equation_clause_list)),
            "end", "when",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        else_when_equation_clause_list: $ => repeat1($.else_when_equation_clause),

        else_when_equation_clause: $ => prec.right(seq(
            "elsewhen", field("condition", $.expression),
            "then", optional(field("equations", $.equation_list))
        )),

        when_statement: $ => seq(
            "when", field("condition", $.expression),
            "then", optional(field("statements", $.statement_list)),
            optional(field("elseWhenClauses", $.else_when_statement_clause_list)),
            "end", "when",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        else_when_statement_clause_list: $ => repeat1($.else_when_statement_clause),

        else_when_statement_clause: $ => prec.right(seq(
            "elsewhen", field("condition", $.expression),
            "then", optional(field("statements", $.statement_list))
        )),

        while_statement: $ => seq(
            "while", field("condition", $.expression),
            "loop", optional(field("statements", $.statement_list)),
            "end", "while",
            optional(field("descriptionString", $.description_string)),
            optional(field("annotationClause", $.annotation_clause))
        ),

        // A.2.7 Expressions

        expression: $ => choice(
            $.if_expression,
            $.range_expression,
            $.simple_expression
        ),

        range_expression: $ => choice(
            seq(field("startExpression", $.simple_expression), ":",
                field("stepExpression", $.simple_expression), ":",
                field("stopExpression", $.simple_expression)),
            seq(field("startExpression", $.simple_expression), ":",
                field("stopExpression", $.simple_expression))
        ),

        simple_expression: $ => choice(
            $.unary_expression,
            $.binary_expression,
            $.primary_expression
        ),

        binary_expression: $ => choice(
            prec.left(1, seq(field("operand1", $.simple_expression), field("operator", "or"), field("operand2", $.simple_expression))),
            prec.left(2, seq(field("operand1", $.simple_expression), field("operator", "and"), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", "<"), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", "<="), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", ">"), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", ">="), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", "=="), field("operand2", $.simple_expression))),
            prec.right(3, seq(field("operand1", $.simple_expression), field("operator", "<>"), field("operand2", $.simple_expression))),
            prec.left(4, seq(field("operand1", $.simple_expression), field("operator", "+"), field("operand2", $.simple_expression))),
            prec.left(4, seq(field("operand1", $.simple_expression), field("operator", "-"), field("operand2", $.simple_expression))),
            prec.left(4, seq(field("operand1", $.simple_expression), field("operator", ".+"), field("operand2", $.simple_expression))),
            prec.left(4, seq(field("operand1", $.simple_expression), field("operator", ".-"), field("operand2", $.simple_expression))),
            prec.left(5, seq(field("operand1", $.simple_expression), field("operator", "*"), field("operand2", $.simple_expression))),
            prec.left(5, seq(field("operand1", $.simple_expression), field("operator", "/"), field("operand2", $.simple_expression))),
            prec.left(5, seq(field("operand1", $.simple_expression), field("operator", ".*"), field("operand2", $.simple_expression))),
            prec.left(5, seq(field("operand1", $.simple_expression), field("operator", "./"), field("operand2", $.simple_expression))),
            prec.right(6, seq(field("operand1", $.primary_expression), field("operator", "^"), field("operand2", $.primary_expression))),
            prec.right(6, seq(field("operand1", $.primary_expression), field("operator", ".^"), field("operand2", $.primary_expression))),
        ),

        unary_expression: $ => prec(7, choice(
            seq(field("operator", "not"), field("operand", $.simple_expression)),
            seq(field("operator", "+"), field("operand", $.simple_expression)),
            seq(field("operator", "-"), field("operand", $.simple_expression))
        )),

        primary_expression: $ => choice(
            $.array_comprehension,
            $.array_concatenation,
            $.array_constructor,
            $.component_reference,
            $.end_expression,
            $.function_application,
            $.literal_expression,
            $.parenthesized_expression
        ),

        literal_expression: $ => choice(
            $.logical_literal_expression,
            $.string_literal_expression,
            $._unsigned_number_literal_expression,
        ),

        _unsigned_number_literal_expression: $ => choice(
            $.unsigned_integer_literal_expression,
            $.unsigned_real_literal_expression,
        ),

        unsigned_integer_literal_expression: $ => $.UNSIGNED_INTEGER,

        unsigned_real_literal_expression: $ => $.UNSIGNED_REAL,

        type_specifier: $ => seq(
            optional(field("global", ".")), field("name", $.name)
        ),
